<resources>
    <string name="app_name">Recorder App</string>
    <string name="record">Record</string>
    <string name="save">SAVE</string>
    <string name="clear_record">CLEAR RECORD</string>
    <string name="date">Date</string>
    <string name="cycling_image">Cycling Image</string>
    <string name="cycling">Cycling</string>
    <string name="longest_ride">Longest Ride</string>
    <string name="biggest_climb">Biggest Climb</string>
    <string name="best_average_speed">Best Average Speed</string>
</resources>